# fractal

./: .gitignore  Cargo.toml  PLAN.md  README.md  lore.sqlite
crates/world-core/: Cargo.toml
crates/world-core/src/: cubegrid.rs  geo.rs  hash.rs  lib.rs  noise.rs
crates/world-gen/: Cargo.toml
crates/world-gen/examples/: annals.rs  probe.rs  towns.rs
crates/world-gen/src/: citymap.rs  civilization.rs  economy.rs  geography.rs  history.rs  hydrology.rs  interior.rs  lib.rs  peerage.rs  people.rs  timeline.rs
crates/world-server/: Cargo.toml
crates/world-server/src/: main.rs  notes.rs
crates/world-tiles/: Cargo.toml
crates/world-tiles/src/: lib.rs  mvt.rs  pmtiles.rs
lore/: Cargo.toml
lore/src/: client.rs  context.rs  lib.rs
web/: index.html
