[package]
name = "world-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
world-gen = { path = "../world-gen" }
world-tiles = { path = "../world-tiles" }
lore = { path = "../../lore" }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs"] }
tower-http = { version = "0.6", features = ["fs"] }
