[package]
name = "world-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
world-core = { path = "../world-core" }
world-gen = { path = "../world-gen" }
world-tiles = { path = "../world-tiles" }
lore = { path = "../../lore" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs"] }
tower-http = { version = "0.6", features = ["fs"] }
